tests/baselines/reference/importCallExpression5ES2018.errors.txt
tests/cases/conformance/es2018/dynamicImport/2.ts(3,23): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es2018/dynamicImport/2.ts(4,24): error TS2532: Object is possibly 'undefined'.
tests/cases/conformance/es2018/dynamicImport/2.ts(5,24): error TS2531: Object is possibly 'null'.
tests/cases/conformance/es2018/dynamicImport/2.ts(6,24): error TS2531: Object is possibly 'null'.


==== tests/cases/conformance/es2018/dynamicImport/0.ts (0 errors) ====
    export class B {
        print() { return "I am B"}
    }
    
    export function foo() { return "foo" }
    
==== tests/cases/conformance/es2018/dynamicImport/1.ts (0 errors) ====
    export function backup() { return "backup"; }
    
==== tests/cases/conformance/es2018/dynamicImport/2.ts (4 errors) ====
    declare function bar(): boolean;
    const specify = bar() ? "./0" : undefined;
    let myModule = import(specify);
                          ~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    let myModule1 = import(undefined);
                           ~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    let myModule2 = import(bar() ? "./1" : null);
                           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2531: Object is possibly 'null'.
    let myModule3 = import(null);
                           ~~~~
!!! error TS2531: Object is possibly 'null'.